[FEAT] Change module resolution to use domain prefix instead of URL
* [FEAT] First working status. Still need to test with absolut redirection modules
* [FEAT] Modules now correctly handles 2 check to access it: iframe only and need Auth
* [FEAT] Update Documentation
